# app-ronda

./: .env.example  .gitignore  COMO-RECUPERAR-PENDENCIAS.md  CORRECOES-IOS.md  CORRIGIR-BANCO-RELATORIOS-COMPLETO.sql  CORRIGIR-SUBSECOES-FORCE.sql  CRIAR-TABELA-USUARIOS.sql  CRIAR-TABELAS-AGORA.sql  CRIAR-TABELAS-SIMPLES.sql  ERRO-AO-SALVAR-SOLUCAO.md  EXECUTAR-AGORA-NO-SUPABASE.sql  FIX-SUPABASE-CACHE.sql  INSTRUCOES-CORRIGIR-RELATORIOS.md  INSTRUCOES_SUBSECOES.md  INSTRUCOES_SUPABASE.md  PROGRESSO_KANBAN.md  README.md  RECRIAR-RELATORIO-PENDENCIAS-COMPLETO.sql  SISTEMA-AUTO-SAVE.md  SOLUCAO-DEFINITIVA.sql  SOLUCAO-IMEDIATA.sql  TESTAR-DEPOIS-DE-RECRIAR.sql  TESTAR-SE-EXECUTOU-SQL.sql  VERIFICAR-E-RECARREGAR.sql  adicionar-coluna-categoria.sql  aplicar-migration-itens-relevantes.js  build_errors.txt  build_errors_utf8.txt  corrigir-policies-bucket.sql  create-agenda-table.sql  create-visitas-realizadas.sql  criar-bucket-fotos.sql  criar-pendencias-manual.mjs  criar-ricardo-master.mjs  criar-tabela-fotos-ronda.sql  criar-usuario-master.mjs  deploy.ps1  diagnostico-banco.sql  diagnostico-completo.sql  diagnostico-erro-save.md  (+84 more)
.claude/: settings.local.json
para ler/: .~lock.alterações app.odp#  alterações app.odp
para ler/odp_temp/: content.xml  meta.xml  settings.xml  styles.xml
public/: _headers  manifest-supervisor.json  manifest.json  sw.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: AgendaCalendario.tsx  AgendaMenu.tsx  AgendaModal.tsx  AgendaScreen.tsx  AppLayout.tsx  AreaTecnicaCard.tsx  Breadcrumb.tsx  (+60 more)
(+47 files in other folders)
